# real-time-live-agent

./: .gitignore  Dockerfile  README.md  automotive_rag_agent_plan.md  existing_solutions_gap_analysis.md
client/: agent.js  audio-processor.js  index.html
client/automotive/: automotive.js  index.html  styles.css
images/: fortuner.avif
server/: config.py  main.py  pipeline.py  serializer.py
server/agents/automotive/: prompts.py
server/processors/: audio_gate.py  call_mute.py  client_interrupt.py  context_sanitizer.py  denoiser.py  intent_classifier.py  llm_empty_guard.py  naturalizer.py  pivot_detector.py  repeat_detector.py  silence_detector.py  speaker_gate.py  speaker_verifier.py  turn_logger.py  turn_reset.py
server/serializers/: raw_pcm.py
server/services/: failover_llm.py
voice-agent/: pyproject.toml
voice-agent/pretrained_models/spkrec-ecapa-voxceleb/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
